--- a/Fundamentos3_CyP.ipynb
+++ b/Fundamentos3_CyP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Fundamentos3_CyP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9/lW0wekmF4BYjLkbQAvn",
+      "authorship_tag": "ABX9TyPEMxEL4HeoF4D6FEDfSkJU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "for n in range(1,6):\n",
         "  print(f'{n} x {m} = {n*m}')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
         "valores=[round(random.uniform(5,11),2)for x in range(20)]\n",
         "print(valores)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,6 +339,352 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NP_Tlylg54a1"
+      },
+      "source": [
+        "#Estructura de control de repoetición Haz-mientras - 30/11/2021\n",
+        "Una estructura de control Haz-mientras nos permit ejecutar repetidamente mientras una condición se siga cumpliendo.\n",
+        "\n",
+        "##Síntaxis\n",
+        "\n",
+        "```\n",
+        "while<condicion>: \n",
+        "  <bloque de sentencias a ejecutar repetidamente>\n",
+        "<siguiente bloque a ejecutar>\n",
+        "```\n",
+        "\n",
+        "La diferencia principal en comparación con la estructura for es que WHILE *NO conoce* el número de ciclos a ejecutar, en for si se conoce \n",
+        "\n",
+        "Como por ejemplo iniciando en el siguiente enunciado:\n",
+        "\n",
+        "Hacer un programa que solicite un valor entero positivo y calcule repetidamete la mitad y se reasigne a la misma variable. El ciclo se debe detener cuando el resultado sea menor que 1.\n",
+        "Mostrar en pantalla el reultado de cada cálculo y al final el número que se realizó.\n",
+        "\n",
+        "```\n",
+        "Introduce un numero entero positivo: 17\n",
+        "8.5\n",
+        "4.25\n",
+        "2.12\n",
+        "1.06\n",
+        "0.53\n",
+        "Total de iteraciones= 5\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iVY6h27v55A3",
+        "outputId": "710e8258-4c81-4aa7-f861-30f509ddf5b5"
+      },
+      "source": [
+        "valor=int(input(\"Introduce un numero entero positivo: \"))\n",
+        "contador=0\n",
+        "if valor>0:\n",
+        "  while valor>1.0:\n",
+        "    valor=valor/2\n",
+        "    print(round(valor,2))\n",
+        "    contador+=1\n",
+        "else:\n",
+        "  print(\"El número es negativo, intenta de nuevo\")\n",
+        "\n",
+        "print(\"Total de iteraciones: \",contador)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce un numero entero positivo: 4\n",
+            "2.0\n",
+            "1.0\n",
+            "Total de iteraciones:  2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SGaQUBid84B8",
+        "outputId": "12b63cd9-8010-45cb-9af3-94d793af79f4"
+      },
+      "source": [
+        "valor=int(input(\"Dame un valor entero: \"))\n",
+        "\n",
+        "while valor!=0:\n",
+        "  print(valor)\n",
+        "  valor=int(input(\"Dame un valor entero:\"))\n",
+        "\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame un valor entero: 2\n",
+            "2\n",
+            "Dame un valor entero:0\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LQlCvL7s9gkx"
+      },
+      "source": [
+        "valor=int(input(\"Dame un valor entero: \"))\n",
+        "\n",
+        "while valor!=0:\n",
+        "  print(valor)\n",
+        "  print(\"Otras cosas\"))\n",
+        "\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S93ZIO35_6LE"
+      },
+      "source": [
+        "Ejercicio"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I4P9oDW1_5kD",
+        "outputId": "8c1e38a5-c0c4-4259-c406-721f56488af1"
+      },
+      "source": [
+        "comprobar=True\n",
+        "\n",
+        "while comprobar==True:\n",
+        "n=int(input(\"Ingrese un número entero positivo: \"))\n",
+        "\n",
+        "  if n>0:\n",
+        "    print(\"Es correcto\")\n",
+        "    for i in range(1,11):\n",
+        "    print(n,\" x \",i+1,\" = \",n*(i+1))\n",
+        "  else:\n",
+        "    print(\"El número ingresado no es correcto\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero positivo: 5\n",
+            "Es correcto\n",
+            "5  x  1  =  5\n",
+            "5  x  2  =  10\n",
+            "5  x  3  =  15\n",
+            "5  x  4  =  20\n",
+            "5  x  5  =  25\n",
+            "5  x  6  =  30\n",
+            "5  x  7  =  35\n",
+            "5  x  8  =  40\n",
+            "5  x  9  =  45\n",
+            "5  x  10  =  50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NwXLSD5DH1cL",
+        "outputId": "fb9716b0-4e26-4ba8-d0d0-f85315323236"
+      },
+      "source": [
+        "comprobar=True\n",
+        "\n",
+        "while comprobar==True:\n",
+        "  n =int(input(\"Ingrese un número entero positivo: \"))\n",
+        "\n",
+        "  if n>0:\n",
+        "    i=1\n",
+        "    while i<11:\n",
+        "      print(n,\" x \",i,\" = \",n*i)\n",
+        "      i+=1\n",
+        "      comprobar=False\n",
+        "  else:\n",
+        "    print(\"El número ingresado no es correcto\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero positivo: 3\n",
+            "3  x  1  =  3\n",
+            "3  x  2  =  6\n",
+            "3  x  3  =  9\n",
+            "3  x  4  =  12\n",
+            "3  x  5  =  15\n",
+            "3  x  6  =  18\n",
+            "3  x  7  =  21\n",
+            "3  x  8  =  24\n",
+            "3  x  9  =  27\n",
+            "3  x  10  =  30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hSnYvB6WKYBo"
+      },
+      "source": [
+        "Escribe un programa que al escribir como dato un número entero positivo N, calcule el resultado de la siguiente serie.\n",
+        "1+(1/2)+(1/3)+(1/4)+...+(1/N)\n",
+        "Si el usuario escribe un número incorrecto, el programa no se ejecuta. En cambio, pregunta de nuevo por la informaión hasta que el dato ingresado sea el correcto.\n",
+        "\n",
+        "\n",
+        "            "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eZ81VBfhK5ng",
+        "outputId": "a7283d08-7f6a-46bf-c5b6-bba0f6c25d72"
+      },
+      "source": [
+        "\n",
+        "n=int(input(\"Ingrese un número entero positivo: \"))\n",
+        "\n",
+        "if n>0:\n",
+        "  resultado=0\n",
+        "  for i in range (1,n+1):\n",
+        "    resultado+=(1/i)\n",
+        "    print(\"El resultado de la serie es: \",resultado)\n",
+        "else:\n",
+        "  print(\"Intente  de nuevo\")\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero positivo: 6\n",
+            "El resultado de la serie es:  1.0\n",
+            "El resultado de la serie es:  1.5\n",
+            "El resultado de la serie es:  1.8333333333333333\n",
+            "El resultado de la serie es:  2.083333333333333\n",
+            "El resultado de la serie es:  2.283333333333333\n",
+            "El resultado de la serie es:  2.4499999999999997\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "501Vz-qKMcba",
+        "outputId": "96dc989e-1e53-4857-a789-7e79b11602f6"
+      },
+      "source": [
+        "comprobar=True\n",
+        "while comprobar:   \n",
+        "  n=int(input(\"Ingrese un número entero positivo: \"))\n",
+        "\n",
+        "  if n>0:\n",
+        "    comprobar=False\n",
+        "    resultado=0\n",
+        "    for i in range (1,n+1):\n",
+        "      resultado+=(1/i)\n",
+        "      print(\"El resultado de la serie es: \",resultado)\n",
+        "  else:\n",
+        "    print(\"Intente  de nuevo\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero positivo: 3\n",
+            "El resultado de la serie es:  1.0\n",
+            "El resultado de la serie es:  1.5\n",
+            "El resultado de la serie es:  1.8333333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vJt6xo09Rtb7"
+      },
+      "source": [
+        "#Estructura Do-While - 2-12-2021\n",
+        "\n",
+        "###Lo mismo que while, primero hace y luego pregunta (evalua)\n",
+        "##En Python no existe el do-while como tal, se emplea el while para sustituirlo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FaprZ-rfT8Jj"
+      },
+      "source": [
+        "    int valor=0;\n",
+        "    /*printf(\"Dame un valor entero: \");\n",
+        "    scanf(\"%i\",&valor);\n",
+        "    while(valor!=0){\n",
+        "        printf(\"%i \\n\", valor);\n",
+        "        printf(\"Dame un valor entero: \");\n",
+        "        scanf(\"%i\",&valor);\n",
+        "    }*/\n",
+        "    printf(\".-.-.-.-.-. Con Do-While.-.-.-.-.-.-.\");\n",
+        "    do{\n",
+        "        printf(\"%i \\n\", valor);\n",
+        "        printf(\"Dame un valor entero: \");\n",
+        "        scanf(\"%i\",&valor);\n",
+        "    }\n",
+        "    while (valor!=0);\n",
+        "    printf(\"Fin del programa\\n\");"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
